Tue Apr 24 13:05:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/Current/Current.cpp:
          Added orb->destroy(), then the test exists perfect on VxWorks

Tue Apr 24 12:06:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/Compression.pidl:
        * tao/Compression/zlib/ZlibCompressor_Factory.cpp:
        * tests/Compression/server.cpp:
          Made the CompressorId an unsigned short and define constants
          for the predefined compressor ids. Thanks to Ossama for proposing
          this change. This fixed bugzilla bug 2910.

Tue Apr 24 11:54:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2678_Regression/Bug_2678_Regression.mpc:
          Don't build server when using CORBA/e micro

Tue Apr 24 09:22:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/AMI_Arguments_Converter_Impl.cpp:
          Implemented the convert_reply. When there is a reply
          dispatcher (set in the collocated case), we do invoke the
          reply dispatcher to call the reply handler. This fixes
          bugzilla 2806

        * tao/Messaging/Asynch_Invocation_Adapter.cpp:
          In case doing a collocated AMI call set the reply
          dispatcher in the operation details. This is needed to
          call the reply dispatcher after the servant has been
          invoked.

        * tao/operation_details.h:
        * tao/operation_details.inl:
          Added reply dispatcher as optional member with get/set
          methods

        * tao/CDR.cpp:
        * tao/Collocated_Invocation.h:
        * tao/Endpoint_Selector_Factory.h:
        * tao/GIOP_Message_Generator_Parser_10.cpp:
        * tao/IIOP_Acceptor.cpp:
        * tao/Invocation_Adapter.cpp:
        * tao/Messaging/ExceptionHolder_i.h
          Layout change

        * tao/DynamicInterface/DII_Reply_Dispatcher.h:
          Fixed typo in comment
