@@ -1,5 +1,10 @@
 Tue Apr 24 13:05:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
+        * tests/POA/Policies/Policies.cpp:
+          Added orb->destroy(), then the test exists perfect on VxWorks
+
+Tue Apr 24 13:05:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
         * tests/POA/Current/Current.cpp:
           Added orb->destroy(), then the test exists perfect on VxWorks
 
